Updated template installer.properties

--- a/features/com.codesourcery.installer/installer.properties
+++ b/features/com.codesourcery.installer/installer.properties
@@ -156,15 +156,15 @@ eclipse.p2.uninstallFiles=setup{exe}:uninstall{exe},setup.ini:uninstall.ini,conf
 ###############################################################################
 # P2 Flavor (Required)
 #   As part of a product build, PDE/Build automatically generates default 
-#   configuration metadata to set start levels and config.ini property. This 
-#   metadata is commonly referred to as Configuration Units (CUs). In 
+#   configuration meta-data to set start levels and config.ini property. This 
+#   meta-data is commonly referred to as Configuration Units (CUs). In 
 #   particular, start levels are set using CU fragments on the IU for the bundle 
 #   being started. The flavor is used as a qualifier when generating the CU's 
 #   name based on the IU.  For example, with "p2.flavor = tooling", 
 #   'toolingwin32.win32.x86org.eclipse.core.runtime' will be the name of the CU 
 #   that configures the org.eclipse.core.runtime bundle on windows. It may be a 
 #   good idea to use a flavor based on your product id to avoid conflicts with 
-#   other metadata, particularly if your product has particular needs with 
+#   other meta-data, particularly if your product has particular needs with 
 #   respect to start levels. 
 ###############################################################################
 eclipse.p2.flavor=tooling
@@ -211,7 +211,7 @@ eclipse.p2.profileName=SGXXProfile
 # Remove Profile IUs (Optional)
 #   This property specifies if all installable units included in the profile
 #   should be removed when the product is uninstalled or upgraded.  This will
-#   includ any installable units that are installed into th profile after the
+#   include any installable units that are installed into the profile after the
 #   initial installation (add-ons).
 #   If this property is set to "true" all IUs in the profile will be removed.
 #   If this property is set to "false" only the root IUs recorded during
@@ -230,7 +230,7 @@ eclipse.p2.removeProfile=true
 #   where
 #     <name> is the name to display
 #     <path> is the path to the file that should be launched.  This path can be 
-#       a file relative to the product installation dirctory
+#       a file relative to the product installation director
 #       (eclipse.p2.rootLocation), or an HTML address.
 #       If the item is an executable binary, append {exe} that will be replaced
 #       with ".exe" on Windows and nothing on Linux.
@@ -241,7 +241,7 @@ eclipse.p2.removeProfile=true
 #     <default> is "true" to perform or "false" to not perform by default.
 #
 #   Example:
-#     Visit Mentor Embedded?;http://www.mentor.com/embedded-software/;html;true
+#     Visit Eclipse.org?;http://www.eclipse.org/;html;true
 #
 ###############################################################################
 #eclipse.p2.launch=
