--- a/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
+++ b/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
@@ -141,7 +141,7 @@ RemovingLink0=Removing link: {0}
 LoadingRepositories=Loading repositories...
 CreatingShortcuts=Creating short-cuts ...
 SettingUpPaths=Setting up paths ...
-SettingPaths=Setting PATH: {0}
+SettingEnvironment=Setting environment: {0}
 CreatingAddRemove=Creating add/remove entry...
 RemovingAddRemove=Removing add/remove entry...
 ClickNext=Click Next to proceed to the next page.
