Removed mon folder from uninstall files.

--- a/features/com.codesourcery.installer/installer.properties
+++ b/features/com.codesourcery.installer/installer.properties
@@ -151,7 +151,7 @@ eclipse.p2.installLocation=eclipse
 #   If the file is an executable binary, append {exe} that will be replaced with 
 #   ".exe" on Windows and nothing on Linux.
 ###############################################################################
-eclipse.p2.uninstallFiles=setup{exe}:uninstall{exe},setup.ini:uninstall.ini,configuration,features,jre,mon,plugins,.eclipseproduct
+eclipse.p2.uninstallFiles=setup{exe}:uninstall{exe},setup.ini:uninstall.ini,configuration,features,jre,plugins,.eclipseproduct
 
 ###############################################################################
 # P2 Flavor (Required)
