Add eclipse.p2.wizardPageTitles property
Add new optional eclipse.p2.wizardPageTitles installer property that can
be used to set the titles for install wizard pages.  If the property is not
specified or a title for a page is not specified, the default page title
is used.
Change text of license page from "License Agreements" to
"Software Agreements".

--- a/features/com.codesourcery.installer/installer.properties
+++ b/features/com.codesourcery.installer/installer.properties
@@ -429,6 +429,18 @@ org.eclipse.p2.wizardNavigation=top
 #eclipse.p2.wizardPages=
 
 ###############################################################################
+# Page Titles (Optional)
+#  Specifies titles for wizard pages.  Separate multiple pages with a comma.
+#  If titles for pages are not specified, the default titles will be used.
+#  Specify the page name followed by the title to display separated by a colon.
+#  <page name>:<page title>,...
+#
+#  Example:
+#   licensePage:Software Agreements
+###############################################################################
+#eclipse.p2.wizardPageTitles=
+
+###############################################################################
 # P2 Progress Filter (Optional)
 #   Specifies a set of regular expressions to filter the progress messages
 #   reported from P2 during installation.  Multiple properties can be specified
