--- a/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
+++ b/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
@@ -32,17 +32,17 @@ Browse=&Browse...
 SelectInstallFolder=Select Install Folder
 SelectInstallFolderMessage=Select the folder for installation.
 LicensePageTitle=Licenses
-LicensePageTitle0=Software Agreement {0}
-LicensePageConsoleMessage=Please read the following software agreements.\nYou must accept the terms of following software agreements before\ncontinuing with the installation.
-LicensePageConsolePrompt=Accept software agreement(s)?
-LicensePageLicenseNotAccepted=Software agreement was not accepted.
+LicensePageTitle0=License Agreement {0}
+LicensePageConsoleMessage=Please read the following license agreements.\nYou must accept the terms of following license agreements before\ncontinuing with the installation.
+LicensePageConsolePrompt=Accept license agreement(s)?
+LicensePageLicenseNotAccepted=License agreement was not accepted.
 LicensePagePleaseEnterYesNo=Please enter 'Yes' or 'No'.
-LicenseMessageMultipleLicenses=<b>Please read and accept the following Software Agreements</b>
-LicenseMessageSingleLicense=<b>Please read and accept the following Software Agreement</b>
-LicensePageNoComponents=<b>There are no components selected that require a software agreement.</b>
+LicenseMessageMultipleLicenses=<b>Please read and accept the following Software License Agreements</b>
+LicenseMessageSingleLicense=<b>Please read and accept the following Software License Agreement</b>
+LicensePageNoComponents=<b>There are no components selected that require a license agreement.</b>
 LicensePageLicenseName1=License Name: {0}\n\n{1}\n
-AcceptLicense=I accept the terms of the Software Agreement  
-AcceptLicenses=I accept the terms of the Software Agreements
+AcceptLicense=I accept the terms of the License Agreement  
+AcceptLicenses=I accept the terms of the License Agreements
 InstallationComplete0=Installation of <b>{0}</b> is complete.  Please click <b>OK</b> to close.
 UninstallationComplete=Uninstallation is complete.  Please click <b>OK</b> to close and perform final cleanup.
 InstallationCancelled0=The installation was cancelled.  Please run setup again to install <b>{0}</b>.
