--- a/features/com.codesourcery.installer/installer.properties
+++ b/features/com.codesourcery.installer/installer.properties
@@ -98,11 +98,24 @@ eclipse.p2.addons.description=Add-ons that provide additional features and funct
 
 ###############################################################################
 # Installer Title (Optional)
-# Optional property to specify the title area text that is displayed for all
-# wizard pages in the installer.  If this property is not specified, no title 
-# will be displayed.
+#   Optional property to specify the title area text that is displayed for all
+#   wizard pages in the installer.  If this property is not specified, no title 
+#   will be displayed.
 ###############################################################################
 #eclipse.p2.title=Software Setup
+
+###############################################################################
+# Installer Title Image (Optional)
+#   Optional image to display in the install wizard title area.  The image file
+#   should be included with the installer.  
+#   If this property is not specified then the image provided by a 
+#   com.codesourcery.installer.icon extension point will be used if available.
+#   If no extension is registered, a default title image will be used.
+#
+#   Example:
+#     eclipse.p2.titleImage=./title.png
+###############################################################################
+#eclipse.p2.titleImage=
 
 ###############################################################################
 # Window Title (Optional)
