--- a/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
+++ b/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
@@ -28,7 +28,7 @@ UninstallTitle=Uninstall
 InstallFolderMessage=Please choose where to install.
 InstallFolder=Where would you like to install?
 RestoreDefaultFolder=&Restore Default
-Browse=&Browse...
+Browse=Brow&se...
 SelectInstallFolder=Select Install Folder
 SelectInstallFolderMessage=Select the folder for installation.
 LicensePageTitle=Licenses
