Update to latest version
* Add IInstallManager and refactored.
* Add install registry to track installations.
* Add eclipse.p2.welcomeText property to allow customizing wizard welcome page
text.
* Add eclipse.p2.titleImage property to allow setting wizard title image using
installer properties.
* Add support for specifying different default install locations based on the
platform.
* Removed eclipse.p2.sortRoots and eclipse.p2.sortOptionalRoots properties.
Change sorting of components according to order they appear in installer
properties.
* Add eclipse.p2.hideComponentVersion that can be used to not display component
versions on the Components and Summary wizard pages.
* Add eclipse.p2.requires that can be used to specify a range of products the
installation depends on.  This can be used with patch installers.  See
documentation for more details.
* Add validation of installation prior to installation.
* Add eclipse.p2.missingRequirement.find and
eclipse.p2.missingRequirement.replace properties that can be used to transform
P2 missing requirement messages.
* Add eclipse.p2.includeAllRepositories that can control whether the installer
queries remote repositories.
* Increase maximum size of INSTMON response file line from 2048 to 32768.
* Fixed progress reporting for install actions.
* Extend ConsoleListPrompter to support single selection.
* Fix graphical glitch in top navigation bar when the first step was current.
* Fix roaming not set on P2 profile so installation could not be moved.
* Fix install folder wizard page not verifying adequate permissions on Windows.
* Fix Paths page to show error if PATH is too large on Windows
* Add -install.clean command line switch to remove installer data area.
* Add run mode to IInstallMode (silent, gui, console).
* Change format of install manifest so IU's are contained in the product node
instead of IU action node.
* Change wizard page busy operation to only show animation after 2 seconds.
* Fix Add-ons page to remove add-ons fr

--- a/features/com.codesourcery.installer/installer.properties
+++ b/features/com.codesourcery.installer/installer.properties
@@ -49,6 +49,16 @@ eclipse.p2.metadata=${eclipse.p2.repos}
 eclipse.p2.artifacts=${eclipse.p2.repos}
 
 ###############################################################################
+# Optional property to set text to display on the wizard Welcome page.
+# The text can be made bold by enclosing in the <b> and </b> tags.
+# The text can be made italic by enclosing in the <i> and </i> tags.
+# If this property is not specified, default text will be displayed.
+# Example:
+#   Welcome to the <b>${eclipse.p2.productName}</b> installation wizard. 
+###############################################################################
+#eclipse.p2.welcomeText=
+
+###############################################################################
 # Add-ons (Optional)
 #   Optional add-ons sites.  This property can specify the URL of repositories
 #   containing add-ons that can be selected to install.  Separate multiple 
@@ -105,19 +115,6 @@ eclipse.p2.addons.description=Add-ons that provide additional features and funct
 #eclipse.p2.title=Software Setup
 
 ###############################################################################
-# Installer Title Image (Optional)
-#   Optional image to display in the install wizard title area.  The image file
-#   should be included with the installer.  
-#   If this property is not specified then the image provided by a 
-#   com.codesourcery.installer.icon extension point will be used if available.
-#   If no extension is registered, a default title image will be used.
-#
-#   Example:
-#     eclipse.p2.titleImage=./title.png
-###############################################################################
-#eclipse.p2.titleImage=
-
-###############################################################################
 # Window Title (Optional)
 #   Specify the window title of the installer.  If this property is not 
 #   specified, the product name will be used.
@@ -142,8 +139,21 @@ eclipse.p2.windowTitle=${eclipse.p2.productName} Setup
 #   Specifies the default root install location.  Use '~' to specify a location 
 #   based on the operating system specific home directory.
 #
+#   A platform specific location can be specified by appending the operating
+#   system and/or architecture to the property name,
+#     eclipse.p2.rootLocation.<os>.<arch> 
+#   where 
+#     <os> is the operating system: linux, win32, or macosx.
+#     <arch> is the architecture: x86 or x86_64
+#
 #   Note: Do not use this property in the values for other properties as it can
-#   be changed by the user during installation.
+#   be changed by the user in the install wizard.
+#
+#   Example:
+#     eclipse.p2.rootLocation=~/${eclipse.p2.productName}
+#     eclipse.p2.rootLocation.win32.x86=~/${eclipse.p2.productName}/win32_x86
+#     eclipse.p2.rootLocation.win32=~/${eclipse.p2.productName}/win32
+#     eclipse.p2.rootLocation.linux=~/${eclipse.p2.productName}/linux
 ###############################################################################
 eclipse.p2.rootLocation=~/${eclipse.p2.productName}
 
@@ -184,7 +194,9 @@ eclipse.p2.flavor=tooling
 
 ###############################################################################
 # Product Identifier (Required)
-#   Specifies a unique identifier for the product
+#   Specifies a unique identifier for the product.  This identifier must be
+#   unique even if the installer is for a patch to an existing product
+#   (eclipse.p2.patch=true).
 ###############################################################################
 eclipse.p2.productId=${eclipse.p2.productName}
 
@@ -368,15 +380,6 @@ eclipse.p2.requiredRoots=
 #eclipse.p2.optionalRootsDefault=
 
 ###############################################################################
-# Component Sorting (Optional)
-#   The following optional properties can be specified to sort components by 
-#   name on the install wizard components page.  By default components will 
-#   appear in the order that they are listed in the "eclipse.p2.roots" property.
-###############################################################################
-eclipse.p2.sortRoots=false
-eclipse.p2.sortOptionalRoots=true
-
-###############################################################################
 # License Agreement (Optional)
 #   Specifies files containing license agreements for the product.  If this 
 #   property is specified, the installer will display a page for the user to 
@@ -460,23 +463,22 @@ org.eclipse.p2.wizardNavigation=top
 #   and the first match will be applied.
 #
 #   The format of the property names is:
-#     eclipse.p2.progressFind0
-#     eclipse.p2.progressFind1
+#     eclipse.p2.progress.find.0
+#     eclipse.p2.progress.find.1
 #     ...
-#     eclipse.p2.progressFindn
 #
-#   For each eclipse.p2.progressFind property, there should be a corresponding
-#   eclipse.p2.progressReplace property that specifies the expression used to
-#   replace the progress message.  The eclipse.p2.progressFind expressions can
-#   contain groups that are referenced by the eclipse.p2.progressReplace 
+#   For each eclipse.p2.progress.find property, there should be a corresponding
+#   eclipse.p2.progress.replace property that specifies the expression used to
+#   replace the progress message.  The eclipse.p2.progress.find expressions can
+#   contain groups that are referenced by the eclipse.p2.progress.replace 
 #   expressions.
 #
 #   Example:
-#    eclipse.p2.progressFind0=\
+#    eclipse.p2.progress.find.0=\
 #    (.*) (([_A-Za-z0-9-]+)\\.([_A-Za-z0-9-]+)\\.([._A-Za-z0-9-]+))(.*)
 ###############################################################################
-eclipse.p2.progressFind0=(.*) (([_A-Za-z0-9-]+)\\.([_A-Za-z0-9-]+)\\.([._A-Za-z0-9-]+).jar)(.*)
-eclipse.p2.progressFind1=(.*) (([_A-Za-z0-9-]+)\\.([_A-Za-z0-9-]+)\\.([._A-Za-z0-9-]+))(.*)
+eclipse.p2.progress.find.0=(.*) (([_A-Za-z0-9-]+)\\.([_A-Za-z0-9-]+)\\.([._A-Za-z0-9-]+).jar)(.*)
+eclipse.p2.progress.find.1=(.*) (([_A-Za-z0-9-]+)\\.([_A-Za-z0-9-]+)\\.([._A-Za-z0-9-]+))(.*)
 
 ###############################################################################
 # P2 Progress Filter Replacement (Optional)
@@ -484,22 +486,21 @@ eclipse.p2.progressFind1=(.*) (([_A-Za-z0-9-]+)\\.([_A-Za-z0-9-]+)\\.([._A-Za-z0
 #   from P2. 
 #
 #   The format of the property names is:
-#     eclipse.p2.progressReplace0
-#     eclipse.p2.progressReplace1
+#     eclipse.p2.progress.replace.0
+#     eclipse.p2.progress.replace.1
 #     ...
-#     eclipse.p2.progressReplacen
 #
-#   For each "eclipse.p2.progressFind" property, there should be a corresponding
-#   "eclipse.p2.progressReplace" property that specifies the expression used to
-#   replace the progress message.  The "eclipse.p2.progressFind" expressions can
-#   contain groups that are referenced by the eclipse.p2.progressReplace 
+#   For each eclipse.p2.progress.find property, there should be a corresponding
+#   eclipse.p2.progress.replace property that specifies the expression used to
+#   replace the progress message.  The eclipse.p2.progress.find expressions can
+#   contain groups that are referenced by the eclipse.p2.progress.replace 
 #   expressions.
 #
 #   Example:
-#     eclipse.p2.progressReplace0=Installing $2
+#     eclipse.p2.progress.replace.0=Installing $2
 ###############################################################################
-eclipse.p2.progressReplace0=Reading $2
-eclipse.p2.progressReplace1=Installing $2
+eclipse.p2.progress.replace.0=Loading $2
+eclipse.p2.progress.replace.1=Installing $2
 
 ###############################################################################
 # P2 Properties (Optional)
@@ -508,6 +509,14 @@ eclipse.p2.progressReplace1=Installing $2
 #   cause the P2 update manager features to be installed.
 ###############################################################################
 org.eclipse.update.install.features=true
+
+###############################################################################
+# Component Versions (Optional)
+#   By default, the installer will display the versions of components on the
+#   Components page.  If this property is not specified or set to 'false', 
+#   components version will be displayed on components page.
+###############################################################################
+#eclipse.p2.hideComponentsVersion=false
 
 ###############################################################################
 # Installer Modules (Optional)
@@ -524,3 +533,124 @@ org.eclipse.update.install.features=true
 #   be loaded should be separated with a comma.
 ###############################################################################
 #eclipse.p2.modules=com.codesourcery.installer.generalModule
+
+###############################################################################
+# Installer Title Image (Optional)
+#   Optional image to display in the install wizard title area.  The image file
+#   should be included with the installer.  
+#   If this property is not specified then the image provided by a 
+#   com.codesourcery.installer.icon extension point will be used if available.
+#   If no extension is registered, a default title image will be used.
+#
+#   Example:
+#     eclipse.p2.titleImage=./title.png
+###############################################################################
+#eclipse.p2.titleImage=
+
+###############################################################################
+# Patch Installer (Optional)
+#   Optional property to specify this installer is a patch for an existing
+#   product.  
+###############################################################################
+#eclipse.p2.patch=true
+
+###############################################################################
+# Product Requirements (Optional)
+#   Optional property to specify this installer requires other products be
+#   installed.  This property specifies the identifiers of the products (and 
+#   optional version ranges) to be updated the installer.  Separate multiple 
+#   products with a semicolon. If the install can only be applied to specific
+#   versions of a product, specify the version range separated by a colon.
+#
+#   <1st Product ID>:<Version Range>;<2nd Product ID>:<Version Range>;...
+#
+#   Specify the minimum and maximum versions of the product separated by a comma
+#   and between either '['/']' to include the version in range or '('/')' to
+#   exclude the version from the range.
+#   If the patch can be installed to any version of the product, don't include
+#   a version range for it.  
+#
+#   The Setup page in the install wizard will display all installed products
+#   that are valid for this installation.  The product will be installed into 
+#   the existing product chosen from the list.  If no installed product is found, 
+#   the user can browse for the location of the product to update.
+#
+#   Example:
+#     To allow a patch to install into a version of a product PRODUCT_1 that 
+#     is greater than or equal to 2.0, but less than 3.0 and also any versions 
+#     of PRODUCT_2:
+#
+#     eclipse.p2.patch=PRODUCT_1:[2.0,3.0);PRODUCT_2
+#  
+###############################################################################
+#eclipse.p2.requires=
+
+###############################################################################
+# Missing Requirement Expressions (Optional)
+#   This property can be used to specify a series of find/replace regular 
+#   expressions that are used to format P2 error messages regarding missing
+#   requirements.  If these properties are not specified, or no expressions
+#   match then the original P2 information will be displayed.
+#
+#   The normal format for a P2 missing requirement messages is similar to:
+#
+#     Cannot complete the install because one or more required items could not 
+#     be found.
+#     Software being installed: My Feature Name 1.0.0 
+#     (com.company.feature.group 1.0.0)
+#     Missing requirement: Other Feature Name 1.0.0 (com.company.feature 1.0.0) 
+#     requires 'bundle com.company.missing.feature 0.0.0' but it could not be 
+#     found
+#     Cannot satisfy dependency:
+#     From: My Feature Name 1.0.0 (com.company.feature.group 1.0.0)
+#     To: com.company.bundle [1.0.0]
+#     Cannot satisfy dependency:
+#     From: Bundle Name 1.0.0 (com.company.bundle 1.0.0)
+#     To: bundle com.company.other.bundle 1.0.0
+#
+#   Regular expression find/replace property pairs can be specified using the 
+#   following format:
+#
+#   eclipse.p2.missingRequirement.find.0=
+#   eclipse.p2.missingRequirement.replace.0=
+#   eclipse.p2.missingRequirement.find.1=
+#   eclipse.p2.missingRequirement.replace.1=
+#   ...
+#
+#   If you want to display a message when a particular requirement (bundle,
+#   package, etc.) is not found, you can use the following find expression:
+#
+#     eclipse.p2.missingRequirement.find.0=.*Software being installed:([_A-Za-z0\
+#     -9-\\. ]+) ([_A-Za-z0-9-\\. ]+)\\(.*requires '(?:bundle |package |)\
+#     <ID OF MISSING REQUIREMENT>.*
+#
+#   Where <ID OF MISSING REQUIREMNT> is replaced with the identifier of the
+#   required feature/bundle.
+#
+#   Example:
+#     eclipse.p2.missingRequirement.find.0=.*Software being installed:([_A-Za-z0\
+#     -9-\\. ]+) ([_A-Za-z0-9-\\. ]+)\\(.*requires '(?:bundle |package |)\
+#     com.product.bundle.*
+#     eclipse.p2.missingRequirement.replace.0=$1 requires Some Product.  Please\
+#      install it first.
+#
+#     The following will display a message that 'Some Product' is required when 
+#     any bundle starting with 'com.product.bundle' is found missing.
+#
+#     eclipse.p2.missingRequirement.find.0=.*
+#     eclipse.p2.missingRequirement.replace.0=Requirements not found.\
+#     Installation can't continue.
+#
+#     This will display the same message or any missing requirement.
+###############################################################################
+#eclipse.p2.missingRequirement.find.0=.*Software being installed:([_A-Za-z0-9-\\. ]+) ([_A-Za-z0-9-\\. ]+)\\(.*requires '(?:bundle |package |)INSERT ID OF REQUIRED BUNDLE HERE.*
+#eclipse.p2.missingRequirement.replace.0=$1 requires INSERT MISSING PRODUCT NAME HERE.  Please install it first.
+
+###############################################################################
+# Include Remote Repositories (Optional)
+#   By default, the installer will only use local repositories during
+#   installation.  To include remote repositories, set this property to 'true'.
+#   Note, this can increase delays significantly as remote repositories are
+#   contacted.
+###############################################################################
+#eclipse.p2.includeAllRepositories=true
