--- a/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
+++ b/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
@@ -15,6 +15,7 @@ InstallFolderPageConsoleInstallFolder=Install Folder: {0}
 SummaryPageTitle=Summary
 InstallingMessage0=Please wait while <b>{0}</b> is installed.
 UpgradingMessage0=Please wait while <b>{0}</b> is upgraded.
+UpdatingMessage0=Please wait while <b>{0}</b> is updated.
 UninstallingMessage=Please wait while the product is uninstalled.
 InstallingPageTitle=Installing...
 ResultsPageTitle=Results
@@ -53,7 +54,7 @@ Start0=Start {0}?
 SummaryMessage=Review the information and click <b>Install</b> to continue.
 SummaryConsoleMessage=Review the information and press <ENTER> to continue.\n\n
 SummaryInstallFolder=<b>Install Folder: </b>
-NoWritePermissions=The specified folder cannot be written to.  Please choose a different folder.
+NoWritePermissions=The specified folder cannot be written to.  Administrator rights may be required.  Please choose a different folder.
 Removing0=Removing {0}
 Components=Components
 ComponentsPage_0=Around {0} required 
@@ -62,19 +63,29 @@ ComponentsPage_VersionColumn=Version
 ComponentsPage_LoadingInstallInformation=Loading install information, please wait ...
 ComponentsPage_Description=Description
 ComponentsPage_Required0={0} (Required)
-ComponentsPage_ComponentsLabel=The following components will be installed:
+ComponentsPage_ComponentsLabelInstall=Select the components you want to install and deselect the components you do not want to install.
+ComponentsPage_ComponentsLabelUpdate=Select the components you want to add and deselect the components you want to remove.
 ComponentsPage_Required=Required Components
 ComponentsPage_Optional=Optional Components
 ComponentsPage_SelectAllOptional=&Select All Optional
 ComponentsPage_DeselectAllOptional=&Deselect All Optional
 ComponentsPage_ComputingSize=Computing install size...
+ComponentsPage_Added=<b>Components that will be added:</b>
+ComponentsPage_Installed=<b>Components that will be installed:</b>
+ComponentsPage_Removed=<b>Components that will be removed:</b>
+ComponentsPage_NotInstalled=<b>Components that will not be installed:</b>
 SummaryPage_0=The selected install location may not have enough free space.  The approximate space required is {0} and only {1} is available.
 SummaryPage_ComponentsLabel=<b>Components:</b>
 SummaryPage_ProceedPrompt=Proceed with installation?
 SummaryPage_InstallationCancelled=Installation cancelled.
+SetupPage_Title0={0} can be installed into the following products.
+SetupPage_Prompt=Where do you want to install?
+InstalledProductsPage_OtherLabel=Other...
+InstalledProductsPage_OtherDescription=Choose a different product.
 Progress_Downloading=Downloading
 Progress_Extracting=Extracting
 UninstallationFailed=An error was encountered during uninstallation.
+Title=Setup
 Title0={0} Setup
 Resume=&Resume
 Quit=&Quit
@@ -128,6 +139,7 @@ PathPageSummaryNotModified0={0} will not be modified.
 Op_Preparing=Preparing to install
 Op_Installing0=Installing {0}
 Op_Updating0=Updating {0}
+Op_Uninstalling0=Uninstalling {0}
 CleanupInstallation=Cleaning up installation.
 InformationPageTitle=Information
 LoadingArtifactRepository0=Loading artifact repository: {0}.
@@ -151,6 +163,8 @@ ConsolePressEnterYesNo2=PRESS <ENTER> TO USE DEFAULT ({0}) OR TYPE [{1}/{2}].
 ConsolePressYesNo1=PLEASE ENTER {0} OR {1}.
 ConsoleItemsTogglePrompt=PRESS <ENTER> TO CONTINUE\nOR THE NUMBER OF THE OPTION TO CHANGE.
 ConsolePressEnterOrChange=PRESS <ENTER> OR TYPE NEW VALUE.
+ConsoleError0=Error: {0}
+ConsoleWarning0=Warning: {0}
 Addons=Add-ons
 AddonsPage_Description=There may be add-ons available for <b>{0}</b>.  Setup can obtain a list of optional add-ons to install.
 AddonsPage_SkipAddons=&Skip add-ons
@@ -160,12 +174,31 @@ AddonsPage_Password=&Password:
 AddonsPage_Login=Logging in...
 AddonsPage_CheckingAddons=Checking for add-ons...
 AddonsPage_ExistingAddonsRemoved0=A previous {0} installation was detected.  Any installed add-ons will be removed.
+AddonsPage_ExistingAddonsUpdate=You will not be able to add new add-ons or remove any installed add-ons.
 AddonsPage_ConsoleInstallAddons=Do you want to check for add-ons?
 AddonsPage_ConsoleUsername=ENTER USERNAME:
 AddonsPage_ConsolePassword=ENTER PASSWORD:
+ValidatingInstall=Validating install...
+SetupPrompter_Title1={0} version {1} is already installed.
+SetupPrompter_Prompt=What do you want to do?
+SetupPrompter_Change=Change
+SetupPrompter_ChangeDescription=Add or remove features in the existing installation.
+SetupPrompter_Remove=Remove
+SetupPrompter_RemoveDescription=Uninstall the existing version.
+SetupPrompter_Upgrade=Upgrade
+SetupPrompter_UpgradeDescription0=Upgrade to version {0}.
+SetupPrompter_Install=Install
+SetupPrompter_InstallDescription=Install to a different location.
 Continue=Continue?
 Yes=Yes
 No=No
+Version=version
+GreaterThan=greater than
+AndLessThan=and less than
+OrEqualTo=or equal to
+EnvironmentAction_SettingEnvironmentVariables=Setting environment variables.
+EnvironmentAction_RemovingEnvironmentVariables=Removing environment variables.
+DriverAction_InstallingDriver=Installing drivers...
 Help_Usage=\nUsage: setup <option(s)>\nOptions are:
 Help_Help=Print this message and exit.
 Help_InstallLocation=Use the specified install location.
@@ -203,6 +236,8 @@ Error_FailedToDeleteShortcut=Failed to delete shortcut:
 Error_InvalidInstallDescriptionVersion=Invalid version in install description:
 Error_AlreadyInstalled1={0} version {1} is already installed at the location.
 Error_Upgrade2={0} version {1} was found at the location and will be upgraded to version {2}.
+Error_ProductsNotFound=The folder does not contain the products required for this installation.  Please specify the folder.
+Error_VersionNotFound1=This installation is for version {0} of {1}.  Please specify the folder to the correct or compatible version. 
 Error_NextToContinue=Click Next to continue.
 Error_PleaseSpecifyLocation=Please specify a location.
 Error_InvalidSelection=The selection is not valid.
@@ -211,3 +246,5 @@ Error_LogFileNotFound=The log file could not be located.
 Error_Login0=Setup was not able to login: {0}
 Error_Addons=Setup was not able to retrieve add-on information.
 Error_FilesNotRemoved=Some files could not be removed:
+Error_PathTooLarge=The current system PATH environment variable is too long and the required paths can't be added.\nThe system PATH must be shortened before this option can be chosen.
+Error_NothingToInstall=<b>You cannot continue.  There is nothing to install.</b>
