Add installer data location options
Add new optional property to specify installer data location,
eclipse.p2.dataLocation.
Add optional --data-dir command line option to specify the installer data directory
to SFX build scripts:
core_build_windows_p2_sfx.sh, core_build_linux_p2_sfx.sh
Fix install to save data location to install manifest and uninstaller to use it.

--- a/features/com.codesourcery.installer/installer.properties
+++ b/features/com.codesourcery.installer/installer.properties
@@ -654,3 +654,14 @@ org.eclipse.update.install.features=true
 #   contacted.
 ###############################################################################
 #eclipse.p2.includeAllRepositories=true
+
+###############################################################################
+# Installer Data Location (Optional)
+#   This property can be used to specify the directory to use for installer 
+#   data.  If this property is not specified, the installer will use the default
+#   ~/.p2_installer or the path specified using the -install.data command line
+#   option.
+#   Use '~' to specify a location based on the operating system specific home 
+#   directory.
+###############################################################################
+#eclipse.p2.dataLocation=~/.p2_installer
