PathPage's text is now allUsers appropriate.

--- a/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
+++ b/plugins/com.codesourcery.installer/src/com/codesourcery/internal/installer/install-messages.properties
@@ -129,16 +129,15 @@ Note: Read-only environment files will not be changed.\n\
 Warning: Without this change, some tools may not function.
 PathPage_ConsolePrompt=Add to PATH?
 PathPage_DoNotModifyPath=Do not modify PATH.
-PathPage_ModifyPath=Modify PATH for current user.
+PathPage_ModifyPath=Modify PATH for {0}.
 ShortcutsPageTitle=Shortcuts
 ShortcutsPageMessage=Create shortcuts to important programs and files.
 ShortcutsPageSummaryTitle=<b>Shortcuts will be created:</b>
 ShortcutsPageConsoleProgramsLocation=Program shortcuts will be created in the following location:
 PathPageTitle=Add to PATH?
 PathPageMessage=Set up the PATH environment.
-PathPageSummaryLabel=<b>PATH</b>
-PathPageSummaryModified0={0} will be modified for the current user.
-PathPageSummaryNotModified0={0} will not be modified.
+PathPageSummaryModified0=<b>PATH</b> will be modified for {0}.
+PathPageSummaryNotModified0=<b>PATH</b> will not be modified.
 Op_Preparing=Preparing to install
 Op_Installing0=Installing {0}
 Op_Updating0=Updating {0}
